@@ -10,7 +10,6 @@ export(fetchWindowedBigwig)
 export(fetchWindowedBigwigList)
 export(fetchWindowedBigwigList_dt)
 export(fetchWindowedBigwig_dt)
-export(overlapIntervalSets)
 export(safeBrew)
 export(ssvFeatureBars)
 export(ssvFeatureBinaryHeatmap)
@@ -18,6 +17,7 @@ export(ssvFeatureEuler)
 export(ssvFeaturePie)
 export(ssvFeatureVenn)
 export(ssvMakeMembTable)
+export(ssvOverlapIntervalSets)
 export(ssvSignalBandedQuantiles)
 export(ssvSignalClustering)
 export(ssvSignalHeatmap)
