@@ -3,7 +3,7 @@
 #' seqsetvis allows you to...
 #'
 #' 2 steps
-#' \code{\link{overlapIntervalSets}}.
+#' \code{\link{ssvOverlapIntervalSets}}.
 #' \code{\link{fetchWindowedBigwig}}.
 #' Otherwise refer to the vignettes to see
 "_PACKAGE"
