@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/overlapIntervalSets.R
-\name{overlapIntervalSets}
-\alias{overlapIntervalSets}
+\name{ssvOverlapIntervalSets}
+\alias{ssvOverlapIntervalSets}
 \title{Intersect a list of GRanges to create a single GRanges object of
 merged ranges including metadata describing overlaps per input GRanges}
 \usage{
-overlapIntervalSets(grs, ext = 0, use_first = FALSE)
+ssvOverlapIntervalSets(grs, ext = 0, use_first = FALSE)
 }
 \arguments{
 \item{grs}{A list of GRanges}
@@ -27,5 +27,5 @@ merged ranges including metadata describing overlaps per input GRanges
 library(GenomicRanges)
 a = GRanges("chr1", IRanges(1:7*10, 1:7*10))
 b = GRanges("chr1", IRanges(5:10*10, 5:10*10))
-overlapIntervalSets(list(a, b))
+ssvOverlapIntervalSets(list(a, b))
 }
